--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ a {
   color: var(--primary-text-color);
 }
 
-/* HEADER */
+/* HEADE */
 .logo {
   color: var(--accent-color);
   font-family: 'Raleway', sans-serif;
